# logos-basecamp

./: .gitignore  CLAUDE.md  README.md  VERSION  flake.nix  metadata.json  run-dev.sh
.github/workflows/: appimage.yml  build.yml  doctests.yml
app/: CMakeLists.txt  Readme.md  main.cpp  window.cpp
app/macos/: Info.plist.in
app/utils/: BuildInfo.h  LogosAppPaths.h  LogosBasecampPaths.h
app/windowdecorations/: TrafficLightsTitleBar.cpp  TrafficLightsTitleBar.h
assets/: logos-app.desktop  logos-basecamp.desktop
ci/: combined.Jenkinsfile  linux.Jenkinsfile  macos.Jenkinsfile
docs/: project.md  spec.md
doctests/: basecamp-crossversion-accounts.test.yaml  basecamp-crossversion-chat.test.yaml  basecamp-modules-bundle.test.yaml  basecamp-modules.test.yaml  run.sh
examples/skins/: README.md  default.json  detached-sidebar.json
main/: index.html
main/macos-latest/: index.html
main/ubuntu-latest/: index.html
nix/: app.nix  appimage.nix  build-info.nix  default.nix  integration-test.nix  macos-bundle.nix  main-ui.nix  qml-tests.nix  sandbox-test.nix  smoke-test.nix  unit-tests.nix
pr-206/: index.html
pr-206/macos-latest/: index.html
pr-206/ubuntu-latest/: index.html
pr-207/: index.html
pr-207/macos-latest/: index.html
pr-207/ubuntu-latest/: index.html
pr-209/: index.html
pr-209/macos-latest/: index.html
pr-209/ubuntu-latest/: index.html
pr-210/: index.html
pr-210/macos-latest/: index.html
pr-210/ubuntu-latest/: index.html
pr-211/: index.html
pr-211/macos-latest/: index.html
pr-211/ubuntu-latest/: index.html
pr-212/: index.html
pr-212/macos-latest/: index.html
pr-212/ubuntu-latest/: index.html
pr-213/: index.html
pr-213/macos-latest/: index.html
pr-213/ubuntu-latest/: index.html
pr-214/: index.html
pr-214/macos-latest/: index.html
pr-214/ubuntu-latest/: index.html
pr-215/: index.html
pr-215/macos-latest/: index.html
pr-215/ubuntu-latest/: index.html
pr-216/: index.html
pr-216/macos-latest/: index.html
pr-216/ubuntu-latest/: index.html
pr-217/: index.html
pr-217/macos-latest/: index.html
pr-217/ubuntu-latest/: index.html
pr-218/: index.html
pr-218/macos-latest/: index.html
pr-218/ubuntu-latest/: index.html
pr-219/: index.html
pr-219/macos-latest/: index.html
pr-219/ubuntu-latest/: index.html
pr-221/: index.html
pr-221/macos-latest/: index.html
pr-221/ubuntu-latest/: index.html
pr-222/: index.html
pr-222/macos-latest/: index.html
pr-222/ubuntu-latest/: index.html
pr-223/: index.html
pr-223/macos-latest/: index.html
pr-223/ubuntu-latest/: index.html
pr-224/: index.html
pr-224/macos-latest/: index.html
pr-224/ubuntu-latest/: index.html
pr-225/: index.html
pr-225/macos-latest/: index.html
pr-225/ubuntu-latest/: index.html
pr-226/: index.html
pr-226/macos-latest/: index.html
pr-226/ubuntu-latest/: index.html
pr-227/: index.html
pr-227/macos-latest/: index.html
pr-227/ubuntu-latest/: index.html
pr-228/: index.html
pr-228/macos-latest/: index.html
pr-228/ubuntu-latest/: index.html
pr-229/: index.html
pr-229/macos-latest/: index.html
pr-229/ubuntu-latest/: index.html
pr-230/: index.html
pr-230/macos-latest/: index.html
pr-231/: index.html
pr-234/: index.html
pr-235/: index.html
pr-236/: index.html
pr-237/: index.html
pr-238/: index.html
pr-239/: index.html
pr-240/: index.html
pr-241/: index.html
pr-243/: index.html
pr-244/: index.html
pr-247/: index.html
pr-249/: index.html
pr-250/: index.html
pr-251/: index.html
qt-ios/: build.sh  main.cpp  run.sh
scripts/: create-dmg.sh  sign-and-notarize.sh
src/: AppsFilterProxy.cpp  AppsFilterProxy.h  AppsModel.cpp  AppsModel.h  CMakeLists.txt  CoreModuleManager.cpp  CoreModuleManager.h  InstallEnums.cpp  InstallEnums.h  InstallRegistry.cpp  InstallRegistry.h  InstallStage.cpp  InstallStage.h  MainContainer.cpp  MainContainer.h  MainUIBackend.cpp  MainUIBackend.h  ModuleFilterProxy.cpp  ModuleFilterProxy.h  ModuleModel.cpp  ModuleModel.h  PackageCoordinator.cpp  PackageCoordinator.h  PluginLoader.cpp  PluginLoader.h  RepositoryModel.cpp  RepositoryModel.h  SkinConfig.cpp  SkinConfig.h  UIPluginManager.cpp  UIPluginManager.h  WorkspaceArea.cpp  WorkspaceArea.h  main_ui_resources.qrc  mdichild.cpp  mdichild.h  mdiview.cpp  mdiview.h  metadata.json
src/Basecamp/AppManager/: AddApplicationDialog.qml  AppColors.qml  AppGrid.qml  AppGridDelegate.qml  AppListDelegate.qml  AppManagerView.qml  AppTile.qml  PackageRowDelegate.qml
src/Basecamp/Settings/: CoreModulesView.qml  DashboardView.qml  ModuleRow.qml  ModulesView.qml  RepositoriesView.qml  SettingsView.qml  UiModulesTab.qml
src/Basecamp/Shell/: BottomToolbar.qml  ConfirmationDialog.qml  ContentViews.qml  OverlayDialogs.qml
src/Basecamp/Sidebar/: SidebarAppDelegate.qml  SidebarPanel.qml
src/qml/controls/: AppGridDelegate.qml  AppListDelegate.qml  ConfirmationDialog.qml  PackageRowDelegate.qml  SidebarAppDelegate.qml  SidebarCircleButton.qml  SidebarIconButton.qml  qmldir
src/qml/icons/: BasecampIcons.qml  qmldir
src/qml/panels/: AppGrid.qml  SidebarPanel.qml  UiModulesTab.qml  qmldir
src/qml/popups/: AddApplicationDialog.qml  qmldir
src/qml/views/: AppManagerView.qml  ContentViews.qml  CoreModulesView.qml  DashboardView.qml  MainContainer.qml  ModulesView.qml  OverlayDialogs.qml  PluginInterfaceView.qml  RepositoriesView.qml  SettingsView.qml  qmldir
src/restricted/: QmlSandbox.cpp  QmlSandbox.h  RestrictedUrlInterceptor.cpp  RestrictedUrlInterceptor.h
tests/: CMakeLists.txt  apps_filter_proxy_test.cpp  apps_model_test.cpp  install_plugin_success_test.cpp  module_filter_proxy_test.cpp  module_model_test.cpp  repository_model_test.cpp  ui-tests.mjs
tests/qml/: CMakeLists.txt  main.cpp  tst_AppManagerView.qml  tst_BadgeContract.qml  tst_RepositoriesView.qml
tests/sandbox/: CMakeLists.txt  tst_qml_sandbox.cpp
tests/sandbox/evil_app/: Main.qml  README.md  evil_import.qml  metadata.json
tests/sandbox/evil_app/EvilModule/: qmldir
tests/sandbox/evil_plugin/: evil_plugin.cpp
(+31 files in other folders)
